# QtRtfEditor

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.COMMERCIAL  LICENSE.LGPL  PKGBUILD  README.md  RTF_COVERAGE_PLAN.md  build.sh  qt-rtf-editor-0.1.0-1-x86_64.pkg.tar.zst
.github/workflows/: build.yml
.opencode/plans/: merge_rtf_spec.md
cmake/: QtRtfEditorConfig.cmake.in
examples/demo/: CMakeLists.txt  DemoWindow.h  MenuBuilder.cpp  MenuBuilder.h  RecentFileHandler.cpp  RecentFileHandler.h  ToolbarBuilder.cpp  ToolbarBuilder.h  main.cpp
include/RichTextEdit/: RichTextEdit.h
pkg/qt-rtf-editor/: .BUILDINFO  .MTREE  .PKGINFO
pkg/qt-rtf-editor/usr/lib/cmake/QtRtfEditor/: QtRtfEditorConfig.cmake  QtRtfEditorTargets-release.cmake  QtRtfEditorTargets.cmake
src/: CMakeLists.txt  ProtectedRange.cpp  ProtectedRange.h  RichTextEdit.cpp  RichTextEdit.h  RtfCharset.cpp  RtfCharset.h  RtfControl.cpp  RtfControl.h  RtfExport.cpp  RtfExport.h  RtfImport.cpp  RtfImport.h  RtfParser.cpp  RtfParser.h  RtfTypes.h  protected_range.cpp  protected_range.h  rich_text_edit.cpp  rich_text_edit.h  rtf_export.cpp  rtf_export.h  rtf_import.cpp  rtf_import.h
src/src/: RtfControl.cpp  RtfControl.h  RtfExport.cpp  RtfImport.cpp  RtfParser.cpp  RtfTypes.h
tests/: CMakeLists.txt  RtfCompare.cpp  RtfCompare.h  TestProtectedRanges.cpp  TestRoundtrip.cpp  TestSemanticComparison.cpp  rtf_compare.cpp  rtf_compare.h  test_format_compatibility.cpp  test_protected_ranges.cpp  test_roundtrip.cpp  test_rtf_roundtrip.cpp  test_rtf_structural.cpp
tests/TestData/: background-color.rtf  caps.rtf  cell-shading.rtf  colors.rtf  escaped-backslash.rtf  expnd.rtf  highlighting.rtf  images.rtf  indents.rtf  kerning.rtf  language-id.rtf  line-spacing.rtf  lists.rtf  positional-supsub.rtf  protect.rtf  right-indent.rtf  spacing.rtf  special-chars.rtf  strikethrough.rtf  superscript.rtf  symbol-font.rtf  tab-stops.rtf  table-ordering.rtf  tables-alignment.rtf  tables-borders.rtf  tables-merged.rtf  tables-padding.rtf  tables-row-borders.rtf  tables.rtf  tabs.rtf  ul-dashdot.rtf  ul-dashdotdot.rtf  underline-color.rtf  underline-styles.rtf
tests/testdata/: alignment.rtf  bold.rtf  complex.rtf  fonts.rtf  samples.rtf
